--- a/cookiepolicy.html
+++ b/cookiepolicy.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta description="Fulcrum è un’associazione che sorge dall’idea di offrire un supporto professionale ad artisti, scrittori e autori per i loro progetti, fornendo una serie di servizi nelle varie fasi, dalla concezione alla eventuale commercializzazione.">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Fulcrum Associazione Culturale - FAQ</title>
+<title>Fulcrum Associazione Culturale - Template</title>
 <!-- InstanceEndEditable -->
 <style type="text/css">
 #iubenda-cs-banner {
@@ -57,7 +57,6 @@ var _iub = _iub || [];
 _iub.csConfiguration = {"lang":"en","siteId":1515321,"cookiePolicyUrl":"http://www.fulcrumassociazione.com/cookiepolicy.html","cookiePolicyId":16308726, "banner":{ "slideDown":false,"applyStyles":false } };
 </script><script type="text/javascript" src="//cdn.iubenda.com/cookie_solution/safemode/iubenda_cs.js" charset="UTF-8" async></script>
 <!-- InstanceBeginEditable name="head" -->
-<link href="css/faq.css" rel="stylesheet" type="text/css">
 <!-- InstanceEndEditable -->
 <link href="css/template.css" rel="stylesheet" type="text/css">
 <link href="css/navbar.css" rel="stylesheet" type="text/css">
@@ -100,47 +99,76 @@ _iub.csConfiguration = {"lang":"en","siteId":1515321,"cookiePolicyUrl":"http://w
 	  		<a class="navbarlink" href ="about.html">Chi Siamo</a> <a class="navbarlink" href ="servizi.html">Servizi</a> <a class="navbarlink" href ="faq.html">FAQ</a> <a class="navbarlink" href ="contactform.html">Contatti</a> <a class="navbarlink" href ="index.html">Home</a>		
 		</div>
 	</div>
-<!-- InstanceBeginEditable name="body" -->
+<!-- InstanceBeginEditable name="body" -->	
 <!-- InstanceEndEditable -->
 	<div class="container">
 		<!-- InstanceBeginEditable name="content" -->
-		<section class="FAQ">
-			<div>
-				<h1>Domande Frequenti</h1>
-				<div class="domanda">
-					<h2>Cos'è Fulcrum?</h2>
-					<p>Fulcrum è un'associazione culturale con lo scopo di promuovere e sviluppare progetti di artisti e autori. </p>
-				</div>
-				<div class="domanda">
-					<h2>Come lavorate?</h2>
-					<p>L'associazione nasce per creare una rete di collaborazioni e condividere capacità e <em>know-how</em>. Si prende dirattemente carico dei progetti o mette in contatto le persone con le conoscenze giuste. </p>
-				</div>
-				<div class="domanda">
-				  <h2>Come posso presentarvi un mio progetto?</h2>
-				  <p>Attraverso la nostra pagina <a href="https://www.facebook.com/fulcrumassociazioneculturale/">Facebook</a> o la pagina <a href="contactform.html">Contatti</a> sul sito.</p>
-				</div>
-				<div class="domanda">
-				  <h2>Fate pagare per i vostri servizi?</h2>
-				  <p>In base al tipo di progetto e alle richieste fatteci, Fulcrum può semplicemente richiedere una collaborazione ad un altro progetto, ricavare fondi da <em>crowdfunding</em> e/o finanziamenti pubblici, occuparsi della vendita diretta o agire da intermediario fra due individui. </p>
-				</div>
-				<div class="domanda">
-				  <h2>Fate solo editoria o vi occupate di altri campi?</h2>
-				  <p>Ci occupiamo di editoria e di arte. Dove è possibile cerchiamo di coniugare le due cose.</p>
-				</div>
-				<div class="domanda">
-				  <h2>Producete anche per l’estero e in altre lingue?</h2>
-				  <p>Siamo in grado di produrre e distribuire in Inglese e Francese e stiamo prendendo contatti con la distribuzione europea.</p>
-				</div>
-				<div class="domanda">
-				  <h2>Accettate fumetti?</h2>
-				  <p>Siamo in grado di impaginare, editare, produrre e distribuire anche prodotti di fumettistica. </p>
-				</div>
-				<div class="domanda">
-				  <h2>Devo iscrivermi all'associazione per lavorare con voi?</h2>
-				  <p>Non necessariamente, sarà sufficiente stilare un contratto di collaborazione.</p>
-				</div>
-			</div>
-		</section>
+		<h1>Cookie Policy for Fulcrum Associazione Culturale</h1>
+
+<p>This is the Cookie Policy for Fulcrum Associazione Culturale, accessible from www.fulcrumassociazione.com</p>
+
+<p><strong>What Are Cookies</strong></p>
+
+<p>As is common practice with almost all professional websites this site uses cookies, which are tiny files that are downloaded to your computer, to improve your experience. This page describes what information they gather, how we use it and why we sometimes need to store these cookies. We will also share how you can prevent these cookies from being stored however this may downgrade or 'break' certain elements of the sites functionality.</p>
+
+<p>For more general information on cookies see the Wikipedia article on HTTP Cookies.</p>
+
+<p><strong>How We Use Cookies</strong></p>
+
+<p>We use cookies for a variety of reasons detailed below. Unfortunately in most cases there are no industry standard options for disabling cookies without completely disabling the functionality and features they add to this site. It is recommended that you leave on all cookies if you are not sure whether you need them or not in case they are used to provide a service that you use.</p>
+
+<p><strong>Disabling Cookies</strong></p>
+
+<p>You can prevent the setting of cookies by adjusting the settings on your browser (see your browser Help for how to do this). Be aware that disabling cookies will affect the functionality of this and many other websites that you visit. Disabling cookies will usually result in also disabling certain functionality and features of the this site. Therefore it is recommended that you do not disable cookies.</p>
+
+<p><strong>The Cookies We Set</strong></p>
+
+<ul>
+
+
+
+
+
+
+<li>
+    <p>Forms related cookies</p>
+    <p>When you submit data to through a form such as those found on contact pages or comment forms cookies may be set to remember your user details for future correspondence.</p>
+</li>
+
+
+</ul>
+
+<p><strong>Third Party Cookies</strong></p>
+
+<p>In some special cases we also use cookies provided by trusted third parties. The following section details which third party cookies you might encounter through this site.</p>
+
+<ul>
+
+
+<li>
+    <p>Third party analytics are used to track and measure usage of this site so that we can continue to produce engaging content. These cookies may track things such as how long you spend on the site or pages you visit which helps us to understand how we can improve the site for you.</p>
+</li>
+
+
+
+
+
+
+
+
+</ul>
+
+<p><strong>More Information</strong></p>
+
+<p>Hopefully that has clarified things for you and as was previously mentioned if there is something that you aren't sure whether you need or not it's usually safer to leave cookies enabled in case it does interact with one of the features you use on our site. This Cookies Policy was created with the help of the Generator of <a href="https://cookiepolicygenerator.com">GDPR Cookies Policy</a> and the <a href="https://privacypolicygenerator.info">GDPR Privacy Policy</a>.</p>
+
+<p>However if you are still looking for more information then you can contact us through one of our preferred contact methods:</p>
+
+<ul>
+<li>Email: fulcrumassociazione@gmail.com</li>
+
+</ul>
+
 		<!-- InstanceEndEditable -->
 		<section class="footer_banner" id="contact">
     		<h2 class="hidden">Fulcrum Associazione Culturale </h2>
