--- a/progetti/ammo2.html
+++ b/progetti/ammo2.html
@@ -8,6 +8,54 @@
 <!-- InstanceBeginEditable name="doctitle" -->
 <title>Fulcrum Associazione Culturale - ProjectTemplate</title>
 <!-- InstanceEndEditable -->
+<style type="text/css">
+#iubenda-cs-banner {
+    bottom: 0px !important;
+    left: 0px !important;
+    position: fixed !important;
+    width: 100% !important;
+    z-index: 99999998 !important;
+    background-color: black;
+  }
+  .iubenda-cs-content {
+    display: block;
+    margin: 0 auto;
+    padding: 20px;
+    width: auto;
+    font-family: Helvetica,Arial,FreeSans,sans-serif;
+    font-size: 14px;
+    background: #000;
+    color: #fff;}
+  .iubenda-cs-rationale {
+    max-width: 900px;
+    position: relative;
+    margin: 0 auto;
+  }
+  .iubenda-banner-content > p {
+    font-family: Helvetica,Arial,FreeSans,sans-serif;
+    line-height: 1.5;
+  }
+  .iubenda-cs-close-btn {
+    margin:0;
+    color: #fff;
+    text-decoration: none;
+    font-size: 14px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    border: none;
+  }
+  .iubenda-cs-cookie-policy-lnk {
+    text-decoration: underline;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 900;
+  }
+</style>
+<script type="text/javascript">
+var _iub = _iub || [];
+_iub.csConfiguration = {"lang":"en","siteId":1515321,"cookiePolicyUrl":"http://www.fulcrumassociazione.com/cookiepolicy.html","cookiePolicyId":16308726, "banner":{ "slideDown":false,"applyStyles":false } };
+</script><script type="text/javascript" src="//cdn.iubenda.com/cookie_solution/safemode/iubenda_cs.js" charset="UTF-8" async></script>
 <!-- InstanceBeginEditable name="head" -->	
 <!-- InstanceEndEditable -->
 <link href="../css/template.css" rel="stylesheet" type="text/css">
@@ -21,7 +69,7 @@
 
 <body>
 	<div class="topbarsmall">
-		<img class="smalllogo" src="../images/banners/fulcrumbannersmall.jpg" alt="fulcrum_banner_top">
+		<img class="smalllogo" src="../images/banners/FulcrumBannerSmall.png" alt="fulcrum_banner_top">
     	<div id="smallmenulinks">
 			<a href ="../progetti.html">Progetti</a> 
 			<a href ="../about.html">Fulcrum</a> 
@@ -36,7 +84,7 @@
 	</div>
 	
 	<div class="topbar">
-		<div class="logowrap"><img class="upperlogo" src="../images/logo%20350x125.jpg" alt="fulcrum_logo"></div> 
+		<div class="logowrap"><img class="upperlogo" src="../images/banners/Fulcrum300x125.png" alt="fulcrum_logo"></div> 
 		<div class="navbar">
 			<div class="subnav">
                 <div class="subnavbtn">
@@ -83,7 +131,7 @@
 						<time class="newsdate">18/02/2019</time>
 						<h3>Fulcrum Associazione Culturale</h3>
 					    </div>                        
-						<a href="../index.html"><img src="../images/banners/Fulcrum250x125.jpg" alt="fulcrum_news"></a>
+						<a href="../index.html"><img src="../images/banners/Fulcrum250x125.png" alt="fulcrum_news"></a>
 						<h4>Siamo Online! </h4>
 						<p>Siamo finalmente online e operativi, nella pagina principale, tenuta in costante aggiornamento, trovate i link ai nostri progetti.</p>	
 						<div class="divider"></div>
@@ -132,6 +180,7 @@
           		<div class="footericon"><a href="http://www.instagram.com/fulcrum_associazione_culturale/"><i class="fab fa-instagram"></i></a></div>
 				<div class="footericon"><a href="../contactform.html"><i class="fas fa-envelope"></i></a></div>
 			</div>
+			<div id="policies"><a href="https://www.iubenda.com/privacy-policy/16308726" class="iubenda-white iubenda-embed" title="Privacy Policy ">Privacy Policy</a></div>	
 		</section>
   <!-- Copyrights Section -->
   		<div class="copyright">&copy;2019 - <strong>Fulcrum Associazione Culturale</strong></div>
@@ -148,5 +197,6 @@
 			}
 		}			
 	</script>
+	<script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
 </body>
 <!-- InstanceEnd --></html>
