--- a/index.html
+++ b/index.html
@@ -24,10 +24,58 @@
 <script src="js/slippry.min.js"></script>
 <link rel="stylesheet" href="css/slippry.css" />
 <link href="css/template.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+#iubenda-cs-banner {
+    bottom: 0px !important;
+    left: 0px !important;
+    position: fixed !important;
+    width: 100% !important;
+    z-index: 99999998 !important;
+    background-color: black;
+  }
+  .iubenda-cs-content {
+    display: block;
+    margin: 0 auto;
+    padding: 20px;
+    width: auto;
+    font-family: Helvetica,Arial,FreeSans,sans-serif;
+    font-size: 14px;
+    background: #000;
+    color: #fff;}
+  .iubenda-cs-rationale {
+    max-width: 900px;
+    position: relative;
+    margin: 0 auto;
+  }
+  .iubenda-banner-content > p {
+    font-family: Helvetica,Arial,FreeSans,sans-serif;
+    line-height: 1.5;
+  }
+  .iubenda-cs-close-btn {
+    margin:0;
+    color: #fff;
+    text-decoration: none;
+    font-size: 14px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    border: none;
+  }
+  .iubenda-cs-cookie-policy-lnk {
+    text-decoration: underline;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 900;
+  }
+</style>
+<script type="text/javascript">
+var _iub = _iub || [];
+_iub.csConfiguration = {"lang":"en","siteId":1515321,"cookiePolicyUrl":"http://www.fulcrumassociazione.com/cookiepolicy.html","cookiePolicyId":16308726, "banner":{ "slideDown":false,"applyStyles":false } };
+</script><script type="text/javascript" src="//cdn.iubenda.com/cookie_solution/safemode/iubenda_cs.js" charset="UTF-8" async></script>
 </head>
 <body>
 	<div class="topbarsmall">
-		<img class="smalllogo" src="images/banners/fulcrumbannersmall.jpg" alt="fulcrum_banner_top">
+		<img class="smalllogo" src="images/banners/FulcrumBannerSmall.png" alt="fulcrum_banner_top">
     	<div id="smallmenulinks">
 			<a href ="progetti.html">Progetti</a> 
 			<a href ="about.html">Fulcrum</a> 
@@ -42,7 +90,7 @@
 	</div>
 	
 	<div class="topbar">
-        <div class="logowrap"><img class="upperlogo" src="images/logo 350x125.jpg" alt="fulcrum_logo"></div> 
+        <div class="logowrap"><img class="upperlogo" src="images/banners/Fulcrum300x125.png" alt="fulcrum_logo"></div> 
 		<div class="navbar">
 			<div class="subnav">
                 <div class="subnavbtn">
@@ -69,7 +117,7 @@
 	</section> -->
 	<section class="slider">		
 			<ul id="slides">
-  				<li><a href="about.html"><img src="images/banners/Fulcrum1100x300.jpg" alt="Fulcrum Associazione Culturale"></a></li>
+  				<li><a href="about.html"><img src="images/banners/Fulcrum1100x300.png" alt="Fulcrum Associazione Culturale"></a></li>
   				<li><a href="/progetti/guida.html"><img src="images/banners/Guida1100x300.jpg"  alt="Guida alla Frontiera Galattica - I viaggi della nave Onyx"></a></li>
   				<li><a href="/progetti/rune.html"><img src="images/banners/Rune1100x300.jpg" alt="Rune - La rinascita della prestigiosa rivista sul GDR"></a></li>
 				<li><a href="/progetti/oca.html"><img src="images/banners/Oca1100x300.jpg" alt="Gioco dell'Oca - Un classico riprodotto da Fulcrum in chiave artistica"></a></li>
@@ -80,7 +128,7 @@
   	<section class="news" id="news">
 		<h2>Ultime Notizie</h2>
         <div class="newsarticlebox">
-          <article class="newsarticle"> <a href="index.html"><img src="images/banners/Fulcrum250x125.jpg" alt="fulcrum_news" class="newsimage"></a>
+          <article class="newsarticle"> <a href="index.html"><img src="images/banners/Fulcrum250x125.png" alt="fulcrum_news" class="newsimage"></a>
             <p class="newstext">La beta del sito di Fulcrum è online! Ci scusiamo per eventuali disservizi!</p>
           </article>
           <article class="newsarticle"> <a href="progetti/guida.html"><img src="images/banners/Guida250x125.jpg" alt="guida_news" class="newsimage"></a>
@@ -103,11 +151,13 @@
 		<div class="footericons">
           	<div class="footericon"><a href="https://www.facebook.com/fulcrumassociazioneculturale/"><i class="fab fa-facebook-square"></i></a></div>
           	<div class="footericon"><a href="http://www.instagram.com/fulcrum_associazione_culturale/"><i class="fab fa-instagram"></i></a></div>
-			<div class="footericon"><a href="contactform.html"><i class="fas fa-envelope"></i></a></div>
+			<div class="footericon"><a href="contactform.html"><i class="fas fa-envelope"></i></a></div>			
 		</div>
+		<div id="policies"><a href="https://www.iubenda.com/privacy-policy/16308726" class="iubenda-white iubenda-embed" title="Privacy Policy ">Privacy Policy</a></div>		
 	</section>
   <!-- Copyrights Section -->
   <div class="copyright">&copy;2019 - <strong>Fulcrum Associazione Culturale</strong></div>
+		
 </div>
 <!-- Main Container Ends -->
 	
@@ -136,5 +186,6 @@
 			}
 		}			
 	</script>
+	<script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
 </body>
 </html>
